# awful-zipper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: app.hpp  background.hpp  compress.hpp
src/: app.cpp  background.cpp  compress.cpp
